--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,18 @@ body {
   padding-bottom: 20px;
 }
 
+.top_con {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+}
+.nav_con {
+  position: fixed;
+  top: 70px;
+  width: 100%;
+  z-index: 2;
+}
 .top_con,
 .nav_con {
   height: 70px;
